@@ -15,6 +15,7 @@ version 0.7.0 - XX-Feb-2009
  . Director: winSize returns a CGSize (not a CGRect) (issue #159)
  . Director: added FastDirector (issue #145)
  . Director: dispatch missing events in main loop (issue #146)
+ . Director: renamed runScene with runWithScene (issue #194)
  . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
  . Experimental: Added StreakDemo (issue #171)
  . MenuItemFont: assign correct size and documented isEnabled (issue #132)
